index.html change

--- a/static_site/index.html
+++ b/static_site/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Liso the Friendly Web Server</title>
-        <link rel="stylesheet" type="text/css" href="style.css" /> 
+        <link rel="stylesheet" type="text/css" href="/home/jarvis/Desktop/socketProgramming-2022/src/socket/static_site/style.css" /> 
     </head>
 
     <body>
         <div id="page">
-            <img src="images/liso_header.png" alt="Liso the Friendly Web Server"></img>
+            <img src="/home/jarvis/Desktop/socketProgramming-2022/src/socket/static_site/images/liso_header.png" alt="Liso the Friendly Web Server"></img>
             <p>Welcome to the Liso 1.0 web server.  If you see this page then
                congratulations!  Your Liso web server is up and running now!</p>
             <p>This Liso web server was implemented by: xxxxxxx
